# Strata

./: .env.example  .gitignore  DESIGN.md  Makefile  README.md  docker-compose.yml  index.html  opencode.json  package.json  tailwind.config.js
cli/: Dockerfile  go.mod  main.go
cli/internal/client/: client.go
cli/internal/commands/: ai.go  db.go  functions.go  init.go  login.go  root.go  start.go  status.go  stop.go  (+2 more)
docker/nats/: nats-server.conf
docker/postgres/: Dockerfile
docker/prometheus/: prometheus.yml
services/ai/: Dockerfile  encryption.go  go.mod  hub.go  main.go  model_registry.go  providers.go  usage.go
services/api-gateway/: Dockerfile  go.mod  main.go
services/auth/: Dockerfile  go.mod  main.go
services/functions/: Dockerfile  go.mod  main.go
services/graphql/: Dockerfile  go.mod  main.go
services/realtime/: Cargo.toml  Dockerfile
services/realtime/src/: main.rs
services/rest/: Dockerfile  go.mod  main.go
services/storage/: Cargo.toml  Dockerfile
services/storage/src/: main.rs
src/: App.tsx  index.css
src/components/: BackgroundEffects.tsx  CodeBlock.tsx  Comparison.tsx  DashboardLayout.tsx  DashboardPreview.tsx  Dialog.tsx  FeatureCard.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Stats.tsx  Templates.tsx  Testimonials.tsx
src/context/: AuthContext.tsx
src/hooks/: useRealtimeTable.ts  useRecords.ts
src/lib/: strata.ts  withAuthRetry.ts
src/pages/: ApiKeys.tsx  Dashboard.tsx  DashboardOverview.tsx  DataRecords.tsx  Functions.tsx  Home.tsx  Login.tsx  Settings.tsx  Signup.tsx  Storage.tsx  Support.tsx
studio/: ai-hub.html
(+29 files in other folders)
