[package]
name = "storage"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
s3 = { version = "0.33", package = "rust-s3", default-features = false, features = ["tokio-rustls-tls", "with-tokio"] }
image = { version = "0.24", features = ["png", "jpeg"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
